Added add/remove member functionality to groups page; included owner for Groups and only they can control the groups. Views is messy and will be cleaned up but working for now

--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -40,7 +40,7 @@
     </tr>
     {% for group in user.getGroupsIsMember %}
     <tr>
-      <td class="td-center"><a href="{% url 'groups:group_detail' group_name=group.name %}">{{group.name}}</td>
+      <td class="td-center"><a href="{% url 'groups:group-detail' group_name=group.name %}">{{group.name}}</td>
       <td class="td-center">{{group.description}}</td>  
     </tr>
     {% endfor %}
