--- a/templates/groups_index.html
+++ b/templates/groups_index.html
@@ -5,9 +5,8 @@
   <h1>Main page for Groups</h1>
 
   <ul>
-    <li><a href="{% url 'groups:group-list' %}">Browse groups</a></li>
+    <li><a href="{% url 'groups:group-list' %}">Browse my groups</a></li>
     <li><a href="{% url 'groups:group-add' %}">Add new groups</a></li>
-    <li><a href="{% url 'users:user-profile' %}">Manage your groups</a></li>
   </ul>
 </div>
 
