--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -162,7 +162,7 @@
 
 <div class="controls">
   <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-update' %}">Update lenses</button>
-  <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-make-collection' %}">Make collection</button>
+  <button type="submit" form="ids-form" formaction="{% url 'sled_collections:collections-add' %}">Make collection</button>
   <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-give-access' %}">Give access</button>
   <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-revoke-access' %}">Revoke access</button>
   <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-make-private' %}">Make private</button>
