--- a/templates/lens_give_revoke_access.html
+++ b/templates/lens_give_revoke_access.html
@@ -2,11 +2,12 @@
 {% load static %}
 {% block content %}
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <script type="text/javascript" src="{% static 'lenses/js/autocomplete.js' %}"></script>
-
+<input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
+<input type="hidden" id="Urlgroups" data-url="{% url 'api:groups-view' %}" />
 <script>
   $(document).ready(function(){
       // Create Select2 for users and groups
