--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,4 @@
-{% extends "register_header.html" %}
+{% extends 'master_header.html' %}
 
 {% block title %}Create an Account{% endblock %}
 {% load crispy_forms_tags %}
