--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -12,6 +12,8 @@
 	 <!--<link href="https://fonts.googleapis.com/css?family=Bitter|Open+Sans" rel="stylesheet"> -->
 	 <!--<script src="{% static 'lenses/js/sorttable.js' %}"></script>-->
 	 <!--<link rel="shortcut icon" type="image/x-icon" href="{% static 'IPT2017/IPT_logo.png' %}" />-->
+	 {% block extrascripts %}
+	 {% endblock extrascripts %}
 	 <title>Strong Gravitational Lens database</title>
   </head>
   <body>
