--- a/templates/collection_list.html
+++ b/templates/collection_list.html
@@ -2,12 +2,24 @@
 {% load static %}
 
 {% block content %}
-<div class="modal fade" tabindex="-1" role="dialog" id="delete-modal">
+<div class="modal fade" tabindex="-1" role="dialog" id="id-modal">
   <div class="modal-dialog mt-5" role="document">
     <div class="modal-content"></div>
   </div>
 </div>
 
+<div>
+  {% if messages %}
+  {% for message in messages %}
+  <div style="border-radius:0;" {% if message.tags %} class="alert alert-icon alert-{{ message.tags }} alert-dismissible fade show mb-0" role="alert" {% endif %}>
+    {{ message }}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  {% endfor %}
+  {% endif %}
+</div>
 
 <h1>My collections</h1>
 <div class="content ">
@@ -20,6 +32,9 @@
       <td>{{ collection.description }}</td>
       <td> N. items {{ collection.myitems.all|length }}</td>
       <td>
+	<button type="button" class="update-collection btn btn-sm btn-primary" data-form-url="{% url 'sled_collections:collection-update' collection.pk %}">
+          <span class="fa fa-pencil">Edit</span>
+        </button>
         <button type="button" class="delete-collection btn btn-sm btn-danger" data-form-url="{% url 'sled_collections:collection-delete' collection.pk %}">
           <span class="fa fa-trash">Delete</span>
         </button>
@@ -54,12 +69,59 @@
           $(".delete-collection").each(function () {
               $(this).modalForm({
 		  formURL: $(this).data("form-url"),
-		  modalID: "#delete-modal",
+		  modalID: "#id-modal",
 		  isDeleteForm: true
 	      });
           });
       }
       deleteCollectionModalForm();
+
+
+
+      // Update book asynchronous button
+      // message
+      var asyncSuccessMessageUpdate = [
+          "<div ",
+          "style='position:fixed;top:0;z-index:10000;width:100%;border-radius:0;' ",
+          "class='alert alert-icon alert-success alert-dismissible fade show mb-0' role='alert'>",
+          "Success: Book was updated.",
+          "<button type='button' class='close' data-dismiss='alert' aria-label='Close'>",
+          "<span aria-hidden='true'>&times;</span>",
+          "</button>",
+          "</div>",
+          "<script>",
+          "$('.alert').fadeTo(2000, 500).slideUp(500, function () {$('.alert').slideUp(500).remove();});",
+            "<\/script>"
+      ].join("");
+      
+      // modal form
+      function updateCollectionModalForm() {
+          $(".update-collection").each(function () {
+              $(this).modalForm({
+                  formURL: $(this).data("form-url"),
+ 		  modalID: "#id-modal",
+                  asyncUpdate: false,
+                  asyncSettings: {
+                      closeOnSubmit: false,
+                      successMessage: asyncSuccessMessageUpdate,
+                      dataUrl: "books/",
+                      dataElementId: "#books-table",
+                      dataKey: "table",
+                      addModalFormFunction: reinstantiateModalForms
+                  }
+              });
+          });
+      }
+      updateCollectionModalForm();
+      
+      function reinstantiateModalForms() {
+          updateCollectionModalForm();
+          deleteCollectionModalForm();
+      }
+
+      $(".alert").fadeTo(2000, 500).slideUp(500, function () {
+          $(".alert").slideUp(500);
+      });
   });
-</script>
+  </script>
 {% endblock extrascripts %}
