--- a/sled_collections/templates/sled_collections/collection_detail.html
+++ b/sled_collections/templates/sled_collections/collection_detail.html
@@ -85,23 +85,23 @@
     <input type="hidden" name="collection_id" id="collection_id" value="{{collection.id}}">
     <span class="errorlist">{{ error_message }}</span>
     {% if collection.item_type == 'Lenses' %}
-    {% include "lens_list_executive.html" with lenses=collection.myitems.all %}
+    {% include "lenses/lens_list_executive.html" with lenses=collection.myitems.all %}
     {% else %}
     <p> Unknown item type </p>
     {% endif %}
   </form>
-  <div>
+  <div style="float:left;margin-right:4px;">
     <form action="{% url 'lenses:lens-query' %}">
       <button type="submit" class="add-items btn btn-sm btn-primary" >
 	<img src="{% static 'icons/plus.svg' %}" alt="plus">
 	Add items
       </button>
     </form>
-    <button type="button" class="remove-items btn btn-sm btn-danger" data-toggle="modal" data-target="#id-modal-remove-items">
-      <img src="{% static 'icons/trash.svg' %}" alt="trash">
-      Remove selected
-    </button>
   </div>
+  <button type="button" class="remove-items btn btn-sm btn-danger" data-toggle="modal" data-target="#id-modal-remove-items">
+    <img src="{% static 'icons/trash.svg' %}" alt="trash">
+    Remove selected
+  </button>
 </div>
 {% endblock content %}
 
