--- a/sled_collections/templates/sled_collections/collection_list.html
+++ b/sled_collections/templates/sled_collections/collection_list.html
@@ -32,7 +32,14 @@
       <td>{{ collection.description }}</td>
       <td> N. items {{ collection.myitems.all|length }}</td>
       <td>
-	<a href="{% url 'lenses:lens-query' %}">Add items</a>
+	<div style="float:left;margin-right:4px;">
+	  <form action="{% url 'lenses:lens-query' %}">
+	    <button type="submit" class="add-items btn btn-sm btn-primary" >
+	      <img src="{% static 'icons/plus.svg' %}" alt="plus">
+	      Add items
+	    </button>
+	  </form>
+	</div>
 	<button type="button" class="update-collection btn btn-sm btn-primary" data-form-url="{% url 'sled_collections:collection-update' collection.pk %}">
 	  <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
         </button>
