Sorted out notifications.

--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -110,7 +110,7 @@
   {% else %}
   <p>No new notifications</p>
   {% endif %}
-   <a href="{% url 'sled-notifications:list-all' %}">All notifications({{ N_note_all }})</a>
+   <a href="{% url 'sled_notifications:notifications-list' %}">All notifications({{ N_note_all }})</a>
 </div>
 
 
