Delete lenses is now model. Also fixed some bugs related to it.

--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -1,4 +1,6 @@
 {% extends 'master_header.html' %}
+{% load static %}
+
 {% block content %}
 <style>
   .notifications td {margin:0px;padding:2px;}
@@ -7,10 +9,45 @@
 </style>
 
 
+<!-- Modal div -->
+<div class="modal fade" id="id-modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+    </div>
+  </div>
+</div>
+
+<!-- Message div -->
+<div>
+  {% if messages %}
+  {% for message in messages %}
+  {% if message.tags %}
+  <div style="border-radius:0;" class="alert alert-icon alert-{{ message.tags }} alert-dismissible fade show mb-0" role="alert">
+    {{ message }}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  {% else %}
+  <div style="border-radius:0;">
+    {{ message }}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  {% endif %}
+  {% endfor %}
+  {% endif %}
+</div>
+
+        
+
+
+
+
 <div class="section">
   <h1>User Profile page</h1>
 </div>
-
 
 <div class="section">
   <h1>My details</h1>
@@ -27,8 +64,6 @@
     </tr>
   </table>
 </div>
-
-
 
 <div class="section">
   <h1>My Groups</h1>
@@ -169,7 +204,10 @@
   <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-make-private' %}">Make private</button>
   <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-make-public' %}">Make public</button>
   <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-cede-ownership' %}">Cede ownership</button>
-  <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-delete' %}">Delete lenses</button>
+  <button type="button" class="delete-lenses btn btn-sm btn-danger" data-form-url="{% url 'lenses:lens-delete' %}">
+    <img src="{% static 'icons/trash.svg' %}" alt="trash">
+    Delete lenses
+  </button>
   <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-collage' %}">See collage</button>
 </div>
 
@@ -177,6 +215,46 @@
 <div>
   <a href="{% url 'logout'%}">LOGOUT</a>
 </div>
- 
+
+
 {% endblock content %}
   
+{% block extrascripts %}
+<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
+<script type="text/javascript">
+  $(document).ready(function() {
+      $(".delete-lenses").click(function (){
+	  // Construct get query string
+	  var values = [];
+	  $('.content input[type="checkbox"]:checked').each(function (){
+	      values.push( 'ids='+$(this).val() );
+	  });
+
+	  if( values.length == 0){
+              alert('You need to select at least one item!');
+	  } else {
+	      var get_str = '?'+values.join('&')+'&';
+	      
+	      // Fetch only the first part of the URL (without any GET arguments)
+	      var url = $(this).data('form-url').split('?');
+	      var url_core = url[0];
+
+	      // Trigger modal
+	      var new_form_url = url_core+get_str;
+              $(this).modalFormTrigger({
+		  formURL: new_form_url,
+ 		  modalID: "#id-modal"
+	      });
+	  }
+	  
+      });
+
+      $(".alert").fadeTo(3000,1000).slideUp(1000, function () {
+          $(".alert").slideUp(1000);
+      });
+  });
+</script>
+{% endblock extrascripts %}
